2.1.0/_sources/gallery/event_handling/keypress_demo.rst.txt


.. _sphx_glr_gallery_event_handling_keypress_demo.py:


=============
Keypress Demo
=============

Show how to connect to keypress events




.. image:: /gallery/event_handling/images/sphx_glr_keypress_demo_001.png
    :align: center





.. code-block:: python

    from __future__ import print_function
    import sys
    import numpy as np
    import matplotlib.pyplot as plt


    def press(event):
        print('press', event.key)
        sys.stdout.flush()
        if event.key == 'x':
            visible = xl.get_visible()
            xl.set_visible(not visible)
            fig.canvas.draw()

    # Fixing random state for reproducibility
    np.random.seed(19680801)


    fig, ax = plt.subplots()

    fig.canvas.mpl_connect('key_press_event', press)

    ax.plot(np.random.rand(12), np.random.rand(12), 'go')
    xl = ax.set_xlabel('easy come, easy go')
    ax.set_title('Press a key')
    plt.show()

**Total running time of the script:** ( 0 minutes  0.017 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: keypress_demo.py <keypress_demo.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: keypress_demo.ipynb <keypress_demo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
